[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "liberyacs"
description = "A Python library to dynamically evaluate YAML configs to Python objects."
authors = [
    {name = "Trong Le Huu", email = "tronglh.241@gmail.com"}
]
readme = "README.md"
keywords = ["yaml", "yacs"  , "dynamic", "configuration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
dependencies = [
    "yacs>=0.1.8",
]
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = {attr = "liberyacs.__version__"}

[project.urls]
Homepage = "https://github.com/tronglh241/liberyacs"
Documentation = "https://github.com/tronglh241/liberyacs"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "yacs.config",
]
ignore_missing_imports = true
